Works: Contacts, btn, contactDetail info, document tag link, message tag link; Failed: Header no longer working sed WeLearnCMS title, panels not showing in main content. Bootstrap issue?

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <div class="container">
     <div class="col-md-5">
-        <app-contact-list></app-contact-list>
+        <div class="col-md-7">
+            <cms-contact-list></cms-contact-list>
     </div>
-    <div class="col-md-7">
-        <app-contact-detail></app-contact-detail>
+        <cms-contact-detail></cms-contact-detail>
     </div>
 </div>
