--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
- <nav class="navbar navbar-default">
+<!DOCTYPE html>
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
      <a href="#" class="navbar-brand">WeLearn CMS</a>
