Works: No errors on any of the files from VSC; Failed: contactDetail does not display when contactList is clicked; Incorrect Wording or component not actuall in the HTML?

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<app-header></app-header>
+<cms-header></cms-header>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-          <app-contact></app-contact>
-          <app-document></app-document>
-          <app-message></app-message> 
+          <cms-contact></cms-contact>
+          <cms-document></cms-document>
+          <cms-message></cms-message> 
         </div>
     </div>
 </div>
