--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -14,7 +14,7 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-xs-12 margin-top">
-          <app-contact-item *ngFor="let contactEl of contacts" [contact]="contactEl" (click)="contactWasSelected(contactEl)"></app-contact-item>
+          <cms-contact-item *ngFor="let contactEl of contacts" [contact]="contactEl" (click)="contactWasSelected(contactEl)"></cms-contact-item>
         </div>
       </div>
     </div>
