--- a/src/app/document/document-list/document-list.component.html
+++ b/src/app/document/document-list/document-list.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="panel-body">
         <div class="center-panel">
-       <app-document-list *ngIf="let documentEl of documents"></app-document-list>
+       <cms-document-list *ngIf="let documentEl of documents"></cms-document-list>
         </div>
     </div>
 </div>
