Works: everything in contacts DO NOT TOUCH ANYTHING; Failed: documents view not set up yet, same with switchView on header; finish w03 assignment

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,6 +4,6 @@
         <cms-contact-list (selectedContact)="selectedContact = $event"></cms-contact-list>
     </div>
     <div class="col-md-7">
-        <cms-contact-detail *ngIf="selectedContact" [attr.contact]="selectedContact" ></cms-contact-detail>
+        <cms-contact-detail *ngIf="selectedContact" [selectedContact]="selectedContact" ></cms-contact-detail>
     </div>
 </div>
