--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link">Documents</a>
+          <a href="#" class="nav-link" (click)="onSelected('documents')">Documents</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Messages</a>
+          <a href="#" class="nav-link" (click)="onSelected('messages')">Messages</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-item nav-link">Contacts</a>
+          <a href="#" class="nav-item nav-link" (click)="onSelected('contacts')">Contacts</a>
         </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
