--- a/src/app/message/message-edit/message-edit.component.html
+++ b/src/app/message/message-edit/message-edit.component.html
@@ -2,17 +2,17 @@
     <div class="panel-body">
         <form id="document-edit">
             <div class="row">
-                <div class="col-sm-12 form-group">
+                <div class="col-sm-5 form-group">
                     <label for="subject" #subject>Subject</label>
-                    <input type="text" id="subject" class="form-control" size="120" max="120">
+                    <input type="text" id="subject" class="form-control" size="120" max="120" #subject>
                 </div>
-                <div class="col-sm-12 form-group">
+                <div class="col-sm-7 form-group">
                     <label for="message" #msgText>Message</label>
-                    <input type="text" id="message" class="form-control" max="255" size="120">
+                    <input type="text" id="msgText" class="form-control" max="255" size="120" #msgText>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 btn-toolbar">
                     <button class="btn btn-success" type="submit" (click)="onSendMessage()">Send</button>
                     <button class="btn btn-danger" type="button" (click)="onClear()">Clear</button>
                 </div>
@@ -20,3 +20,6 @@
         </form>
     </div>
 </div>
+
+  
+<!--  [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add' }}-->
