--- a/src/app/document/document.component.html
+++ b/src/app/document/document.component.html
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="container">
     <div class="col-md-5">
-        <cms-document-list></cms-document-list>
+        <cms-document-list (selectedDocument)="selectedDocument = $event"></cms-document-list>
     </div>
-    <div class="col-md-4">
-        <cms-document-detail></cms-document-detail>
+    <div class="col-md-7">
+        <cms-document-detail *ngIf="selectedDocument" [selectedDocument]="selectedDocument"></cms-document-detail>
     </div>
 </div>
