--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <div class="container">
     <div class="col-md-5">
         <cms-contact-list (selectedContact)="selectedContact = $event"></cms-contact-list>
