--- a/src/app/message/message-item/message-item.component.html
+++ b/src/app/message/message-item/message-item.component.html
@@ -1,6 +1,18 @@
+<!DOCTYPE html>
 <a href="#" class="list-group-item clearfix">
-    <div class="">
+    <div class="pull-left">
+        <h4 class="list-group-item-heading">{{ message?.id }}</h4>
+    </div>
+    <div class="pull-right">
         <span class="messageHeader">{{ message?.sender }}</span>
         <div class="messageText">{{ message?.msgText }}</div>
+    </div>
+</a>
+
+<a
+href="#"
+class="list-group-item clearfix">
+    <div class="pull-left">
+        <h4 class="list-group-item-heading">{{ message?.id }} : {{ message?.sender }}</h4>
     </div>
 </a>
