--- a/src/app/message/message-list/message-list.component.html
+++ b/src/app/message/message-list/message-list.component.html
@@ -1,21 +1,16 @@
-<div class="row">
-    <div class="col-md-5">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <div class="row pad-left-right">
-                    <span class="title pull-left">Messages</span>
-                </div>
-            </div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <cms-message-item *ngFor="let message of messages" [message]="message"></cms-message-item>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer">
-                <cms-message-edit  onAddMessage(message)="message"></cms-message-edit>
-            </div>
+<!DOCTYPE html>
+<div class="panel-heading">
+    <div class="row pad-left-right">
+        <span class="title pull-left">Messages</span>
+    </div>
+</div>
+<div class="panel-body">
+    <div class="row">
+        <div class="col-xs-12">
+            <cms-message-item *ngFor="let message of messages" [message]="message" (click)="messageWasSelected(message)"></cms-message-item>
         </div>
     </div>
+</div>
+<div class="panel-footer">
+    <cms-message-edit></cms-message-edit>
 </div>
