--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link" (click)="onSelected('documents')">Documents</a>
+          <a href="#" class="nav-item nav-link" (click)="onSelected('documents')">Documents</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link" (click)="onSelected('messages')">Messages</a>
+          <a href="#" class="nav-item nav-link" (click)="onSelected('messages')">Messages</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-item nav-link" (click)="onSelected('contacts')">Contacts</a>
