Works: all message sed add new message feature; Failed: add new message feature, cannot figure out what to put in as arg for addNewMessage() in messageList.html; giving up on week03 until can figure that out, continuing on to week04

--- a/src/app/message/message-list/message-list.component.html
+++ b/src/app/message/message-list/message-list.component.html
@@ -12,5 +12,5 @@
     </div>
 </div>
 <div class="panel-footer">
-    <cms-message-edit></cms-message-edit>
+    <cms-message-edit></cms-message-edit> <!--(submit)="onAddMessage()"-->
 </div>
