--- a/src/app/document/document-detail/document-detail.component.html
+++ b/src/app/document/document-detail/document-detail.component.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <div class="row">
-    <div class="panel panel-default">
-        <div class="col-xs-12 panel-heading clearfix">
-            <h2>{{ selectedDocument?.name }}</h2>
-            <h3>{{ selectedDocument?.id }}</h3>
+<div class="panel panel-default" xmlns="http://www.w3.org/1999/html">
+    <div class="panel-heading">
+      <div class="row pad-all">
+        <h4 class="title margin-left-right">{{selectedDocument?.name}}</h4>
+        <div class="row pull-right margin-left-right">
+          <a class="btn btn-primary">View</a>
+          <a class="btn btn-info" >Edit</a>
+          <a class="btn btn-danger">Delete</a>
         </div>
-        <div class="pull-right btn-toolbar">
-            <a class="btn btn-primary">Edit</a>
-            <a class="btn btn-danger">Delete</a>
-        </div>
+      </div>
+    </div>
     <div class="panel-body">
-        <div class="pull-left col-xs-4">
+      <div class="pad-left-right">
+        <div class="row">
+          <label>Description:</label>
+          <span class="label-value">   Description: {{ selectedDocument?.description }}</span>
         </div>
-        <div class="col-xs-8">
-            <div class="list-group-item-heading">
-                    Link: {{ selectedDocument?.url }}
-            </div>
-            <div class="list-group-item-heading">
-                    Description: {{ selectedDocument?.description }}
-            </div>
+        <br>
+        <div class="row">
+          <label>URL:</label>
+          <span class="label-value">  Link: {{ selectedDocument?.url }}</span>
         </div>
+      </div>
     </div>
-    </div>
+  </div>
 </div>
-
