--- a/src/app/document/document-item/document-item.component.html
+++ b/src/app/document/document-item/document-item.component.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<a
-href="#"
-class="list-group-item clearfix">
-<div class="pull-left">
-  <h4 class="list-group-item-heading">{{ document?.id }} : {{ document?.name }}</h4>
-</div>
-<span class="pull-right">
-    {{ document?.description}}
-    </span>
+<a class="list-group-item clearfix documentDiv" >
+ {{ document.name }}
 </a>
+
