--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,26 +2,27 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-     <a href="#" class="navbar-brand">WeLearn CMS</a>
+     <a class="navbar-brand">WeLearn CMS</a>
      </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-item nav-link" (click)="onSelected('documents')">Documents</a>
+          <a class="nav-item nav-link" (click)="onSelected('documents')">Documents</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-item nav-link" (click)="onSelected('messages')">Messages</a>
+          <a class="nav-item nav-link" (click)="onSelected('messages')">Messages</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-item nav-link" (click)="onSelected('contacts')">Contacts</a>
+          <a class="nav-item nav-link" (click)="onSelected('contacts')">Contacts</a>
         </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" role="button">User <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Save Data</a></li>
-              <li><a href="#">Fetch Data</a></li>
+          <li class="dropdown" cmsDropDown #r="cmsDropDown">
+            <a style="cursor: pointer;" class="dropdown-toggle" role="button">User <span class="caret"></span></a>
+            <ul class="dropdown-menu" [ngClass]="{'show':r.isOpen}">
+              <li><a (click)="onLogIn()">LogIn</a></li>
+              <li><a (click)="onOther()">Other</a></li>
+              <li><a (click)="onLogOut()">LogOut</a></li>
             </ul>
             </li>
             </ul>
