--- a/src/app/message/message-list/message-list.component.html
+++ b/src/app/message/message-list/message-list.component.html
@@ -14,3 +14,20 @@
 <div class="panel-footer">
     <cms-message-edit></cms-message-edit> <!--(submit)="onAddMessage()"-->
 </div>
+
+<!-- <div class="row">
+    <div class="col-xs-12">
+      <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-xs-12">
+      <app-recipe-item
+        *ngFor="let recipeEl of recipes; let i = index"
+        [recipe]="recipeEl"
+        [index]="i"></app-recipe-item>
+    </div>
+  </div>
+  
+   -->
