--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div class="container">
     <div class="col-md-5">
-        <cms-contact-list (selectedContact)="selectedContact = $event"></cms-contact-list>
+        <cms-contact-list></cms-contact-list>
     </div>
     <div class="col-md-7">
         <cms-contact-detail *ngIf="selectedContact" [selectedContact]="selectedContact" ></cms-contact-detail>
