--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -14,7 +14,9 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-xs-12 margin-top">
-          <cms-contact-item *ngFor="let contactEl of contacts" [contact]="contactEl"></cms-contact-item>
+          <cms-contact-item 
+          *ngFor="let contactEl of contacts" [contact]="contactEl" 
+          (click)="onSelected(contactEl)"></cms-contact-item>
         </div>
       </div>
     </div>
