--- a/src/app/document/document-list/document-list.component.html
+++ b/src/app/document/document-list/document-list.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="panel-body">
         <div class="center-panel">
-       <cms-document-item *ngFor="let documentEl of documents" [document]="documentEl" (click)="documentWasSelected(documentEl)"></cms-document-item>
+       <cms-document-item *ngFor="let documentEl of documents" [document]="documentEl" (click)="onSelected(documentEl)"></cms-document-item>
     </div>
     </div>
 </div>
