--- a/src/app/document/document.component.html
+++ b/src/app/document/document.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div class="container">
     <div class="col-md-5">
-        <cms-document-list (selectedDocument)="selectedDocument = $event"></cms-document-list>
+        <cms-document-list></cms-document-list>
     </div>
     <div class="col-md-7">
         <cms-document-detail *ngIf="selectedDocument" [selectedDocument]="selectedDocument"></cms-document-detail>
