--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-md-5">
         <div class="panel panel-default">
-            <cms-message-list (selectedMessage)="selectedMessage = $event"></cms-message-list>
+            <cms-message-list></cms-message-list>
         </div>
         <div class="col-md-7">
             <cms-message-detail *ngIf="selectedMessage" [selectedMessage]="selectedMessage"></cms-message-detail>
