Works: addMessage function adds message with appropriate sender, id, subject, and text; Failed: random typeError (cannot read from top) in console; w05 assignment completed)

--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -5,7 +5,7 @@
             <cms-message-list></cms-message-list>
         </div>
         <div class="col-md-7">
-            <cms-message-detail *ngIf="selectedMessage" [selectedMessage]="selectedMessage"></cms-message-detail>
+            <!-- <cms-message-detail *ngIf="selectedMessage" [selectedMessage]="selectedMessage"></cms-message-detail> -->
         </div>
     </div>
 </div>
