--- a/src/app/message/message-edit/message-edit.component.html
+++ b/src/app/message/message-edit/message-edit.component.html
@@ -4,17 +4,17 @@
         <form  id="document-edit">
             <div class="row">
                 <div class="col-sm-5 form-group">
-                    <label for="subject" #subject>Subject</label>
+                    <label for="subject">Subject</label>
                     <input name="subject" type="text" id="subject" class="form-control" size="120" max="120" #subject>
                 </div>
                 <div class="col-sm-7 form-group">
-                    <label for="message" #msgText>Message</label>
+                    <label for="message">Message</label>
                     <input name="msgText" type="text" id="msgText" class="form-control" max="255" size="120" #msgText>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 btn-toolbar">
-                    <button class="btn btn-success" type="submit" (submit)="onSendMessage()">Send</button>
+                    <button class="btn btn-success" type="button" (click)="onSendMessage()">Send</button>
                     <button class="btn btn-danger" type="button" (click)="onClear()">Clear</button>
                 </div>
             </div>
