Works: added w06 routing et child routing for contactComp et documentComp edit(add); Failed: none; working on w06 remainder of child routes w/edits

--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
-<div class="row">
   <div class="panel panel-default">
     <div class="col-xs-12 panel-heading">
-      <div class="col-xs-9">
-        <span class="heading">Contacts</span>
-      </div>
-      <div class="col-xs-3">
-        <button class="btn btn-success">
-          New Contact
-        </button>
-      </div>
+      <div class=" row pad-left-right">
+        <span class="heading pull-left title">Contacts</span>
+      <a routerLink="new" class="btn btn-success pull-right">Add Contact</a>
     </div>
     <div class="panel-body">
       <div class="row">
         <div class="col-xs-12 margin-top">
-          <cms-contact-item 
-          *ngFor="let contactEl of contacts" [contact]="contactEl" 
-          (click)="onSelected(contactEl)"></cms-contact-item>
+          <cms-contact-item *ngFor="let contactEl of contacts" 
+                                            [contact]="contactEl" 
+                                            (click)="onSelected(contactEl)">
+          </cms-contact-item>
         </div>
       </div>
     </div>
