--- a/src/app/contact/contact-list/contact-list.component.css
+++ b/src/app/contact/contact-list/contact-list.component.css
@@ -7,3 +7,20 @@ img {
 .margin-top {
     margin-top: 10px;
 }
+
+.center-panel {
+    margin-left: auto;
+    margin-right: auto;
+    width: 38rem;
+  }
+  
+  .title {
+    font-size: 2.5rem;
+    font-weight: bold;
+  }
+  
+  .pad-left-right{
+    padding-left:1rem;
+    padding-right:1rem;
+  }
+  
