--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,6 +4,6 @@
         <cms-contact-list></cms-contact-list>
     </div>
     <div class="col-md-7">
-        <cms-contact-detail *ngIf="selectedContact" [selectedContact]="selectedContact" ></cms-contact-detail>
+       <router-outlet></router-outlet>    
     </div>
 </div>
