--- a/src/app/document/document-list/document-list.component.html
+++ b/src/app/document/document-list/document-list.component.html
@@ -3,9 +3,9 @@
     <div class="panel-heading">
         <div class="row pad-left-right">
             <span class="pull-left title">
-                Add Documents
+                Documents
             </span>
-            <a class="btn btn-success pull-right">Add Document</a>
+            <a routerLink="new" class="btn btn-success pull-right">Add Document</a>
         </div>
     </div>
     <div class="panel-body">
