--- a/src/app/document/document.component.html
+++ b/src/app/document/document.component.html
@@ -4,6 +4,6 @@
         <cms-document-list></cms-document-list>
     </div>
     <div class="col-md-7">
-        <cms-document-detail *ngIf="selectedDocument" [selectedDocument]="selectedDocument"></cms-document-detail>
+      <router-outlet></router-outlet>    
     </div>
 </div>
