--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,14 +6,14 @@
      </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li [routerLinkActive]="['active']" class="nav-item">
-          <a [routerLink]="['../document']" class="nav-item nav-link">Documents</a>
+        <li routerLinkActive="active" class="nav-item">
+          <a routerLink="../document" class="nav-item nav-link">Documents</a>
         </li>
-        <li [routerLinkActive]="['active']" class="nav-item">
-          <a [routerLink]="['../message']" class="nav-item nav-link">Messages</a>
+        <li routerLinkActive="active" class="nav-item">
+          <a routerLink="../message" class="nav-item nav-link">Messages</a>
         </li>
-        <li class="nav-item">
-          <a [routerLinkActive]="['active']" [routerLink]="['../contact']" class="nav-item nav-link">Contacts</a>
+        <li routerLinkActive="active" class="nav-item">
+          <a routerLink="../contact" class="nav-item nav-link">Contacts</a>
         </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
