Works: w06 document view, edit (lead to docuEdit placeholder HTML), and delete; Failed: none; Finish w06 with contact childRoutes, edit, and delete

--- a/src/app/message/message-item/message-item.component.html
+++ b/src/app/message/message-item/message-item.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<a href="#" class="list-group-item clearfix">
+<a [routerLink]="['/message', message.id]" class="list-group-item clearfix">
   <div class="">
     <span class="messageHeader">{{ message?.sender }}</span>
     <div class="messageText">{{ message?.msgText }}</div>
