--- a/src/app/contact/contact-item/contact-item.component.html
+++ b/src/app/contact/contact-item/contact-item.component.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <a
-  href="#"
+  [routerLink]="['/contact', contact.id]"
+  routerLinkActive="active"
   class="list-group-item clearfix">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ contact?.name }}</h4>
@@ -13,3 +14,4 @@
           style="max-height: 50px;">
       </span>
 </a>
+
