--- a/src/app/contact/contact-detail/contact-detail.component.html
+++ b/src/app/contact/contact-detail/contact-detail.component.html
@@ -5,8 +5,8 @@
             <h2>{{ selectedContact?.name }}</h2>
         </div>
         <div class="pull-right btn-toolbar">
-            <a class="btn btn-primary">Edit</a>
-            <a class="btn btn-danger">Delete</a>
+            <a routerLink="edit" class="btn btn-primary">Edit</a>
+            <a (click)="onDelete()"  class="btn btn-danger">Delete</a>
         </div>
     <div class="panel-body">
         <div class="pull-left col-xs-4">
