--- a/src/app/document/document-list/document-list.component.html
+++ b/src/app/document/document-list/document-list.component.html
@@ -10,7 +10,9 @@
     </div>
     <div class="panel-body">
         <div class="center-panel">
-       <cms-document-item *ngFor="let document of documents" [document]="document"></cms-document-item>
+       <cms-document-item *ngFor="let document of documents" 
+                                                [document]="document">
+        </cms-document-item>
     </div>
     </div>
 </div>
