--- a/src/app/document/document-edit/document-edit.component.html
+++ b/src/app/document/document-edit/document-edit.component.html
@@ -1,1 +1,62 @@
-<p>document-edit works!</p>
+<div class="panel panel-default">
+    <div class="panel-body">
+  
+      <form id="document-edit" #f="ngForm" (ngSubmit)="onSubmit(f)">
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <label for="name">Document Title:</label>
+            <input
+              type="text"
+              id="name"
+              name="firstLast"
+              ngModel 
+              required
+              class="form-control"
+              size="120"
+              max="120">
+          </div>
+        </div>
+  
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <label for="description">Document Description:</label>
+            <input
+              type="text"
+              id="description"
+              name="description"
+              ngModel 
+              required
+              class="form-control"
+              size="120"
+              max="255">
+          </div>
+        </div>
+  
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <label for="url">Document URL:</label>
+            <input
+              type="text"
+              id="url"
+              name="url"
+              ngModel
+              required
+              class="form-control"
+              size="150"
+              max="255">
+          </div>
+        </div>
+  
+        <div class="row">
+          <div class="col-xs-12 btn-toolbar">
+            <button class="btn btn-success" type="submit" (click)="onSubmit(f)">Save</button>
+            <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
+          </div>
+        </div>
+  
+      </form>
+  
+    </div>
+  </div>
+  
+  
