--- a/src/app/contact/contact-edit/contact-edit.component.css
+++ b/src/app/contact/contact-edit/contact-edit.component.css
@@ -6,6 +6,9 @@
   .invalid.ng-invalid.ng-dirty {
     border: 1px solid red;
   }
+  input.ng-invalid {
+    border: 1px solid red;
+  }
   
   .pad-left-right{
     padding-left:.1rem;
