--- a/src/app/document/document-edit/document-edit.component.html
+++ b/src/app/document/document-edit/document-edit.component.html
@@ -1,22 +1,27 @@
 <div class="panel panel-default">
     <div class="panel-body">
   
-      <form id="document-edit" #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <form id="document-edit" #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
         <div class="row">
           <div class="col-sm-12 form-group">
+
             <label for="name">Document Title:</label>
             <input
               type="text"
               id="name"
-              name="firstLast"
-              ngModel 
-              required
+              name="name" 
+             NgModel 
+             required
               class="form-control"
               size="120"
-              max="120">
+              max="120"
+              [ngModel]="document?.name"
+              #name="ngModel">
+              <span style="color:red" [hidden]="!name.invalid">
+                <div class="alert alert-danger">Document name is required.</div>
+                </span>
           </div>
         </div>
-  
         <div class="row">
           <div class="col-sm-12 form-group">
             <label for="description">Document Description:</label>
@@ -24,14 +29,13 @@
               type="text"
               id="description"
               name="description"
-              ngModel 
-              required
               class="form-control"
+              NgModel
               size="120"
-              max="255">
-          </div>
-        </div>
-  
+              max="255"
+              [ngModel]="document?.description"
+              #description="ngModel">
+                 </div>
         <div class="row">
           <div class="col-sm-12 form-group">
             <label for="url">Document URL:</label>
@@ -39,24 +43,25 @@
               type="text"
               id="url"
               name="url"
-              ngModel
+              NgModel
               required
               class="form-control"
-              size="150"
-              max="255">
-          </div>
+              size="120"
+              max="255"
+              [ngModel]="document?.url"
+              #url="ngModel">
+              <span style="color:red" [hidden]="!url.invalid">
+                <div class="alert alert-danger">Document URL is required.</div>
+                </span>
+             </div>
         </div>
-  
+        </div>
         <div class="row">
           <div class="col-xs-12 btn-toolbar">
-            <button class="btn btn-success" type="submit" (click)="onSubmit(f)">Save</button>
+            <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>
             <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
           </div>
         </div>
-  
       </form>
-  
     </div>
   </div>
-  
-  
