Works: updateContact, deleteContact, addtogroups complete; Failed: does not display error message (yet) for dupe contact being added to group; Next, finish up those little details and submit w08

--- a/src/app/contact/contact-edit/contact-edit.component.css
+++ b/src/app/contact/contact-edit/contact-edit.component.css
@@ -6,7 +6,7 @@
   .invalid.ng-invalid.ng-dirty {
     border: 1px solid red;
   }
-  input.ng-invalid {
+  input.required {
     border: 1px solid red;
   }
   
