--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -10,7 +10,7 @@
         <div class="col-xs-12 margin-top">
           <cms-contact-item *ngFor="let contact of contacts" 
                                             [contact]="contact"
-                                            dnd-draggable [dragEnabled]="true" dragData="contact" [dropZones]="['contactGroup']">
+                                            dnd-draggable [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']">
           </cms-contact-item>
         </div>
       </div>
