--- a/src/app/contact/contact-edit/contact-edit.component.html
+++ b/src/app/contact/contact-edit/contact-edit.component.html
@@ -14,7 +14,7 @@
             max="120"
             [ngModel]="contact?.name"
             #name="ngModel">
-            <span style="color: red" [hidden]="!name.invalid && name.touched">
+            <span style="color: red" [hidden]="!name.invalid && name.touched || editMode">
             <div class="alert alert-danger">Name is required.</div>
           </span>
         </div>
@@ -34,7 +34,7 @@
             [ngModel]="contact?.email"
             #email="ngModel"
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
-            <span style="color: red" [hidden]="!email.invalid && email.touched">
+            <span style="color: red" [hidden]="!email.invalid && email.touched || editMode">
               <div class="alert alert-danger">Enter a valid email address.</div>
             </span>
         </div>
@@ -53,7 +53,7 @@
             [ngModel]="contact?.phone"
             #phone="ngModel"
             pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*">
-            <span style="color: red" [hidden]="!phone.invalid && phone.touched">
+            <span style="color: red" [hidden]="!phone.invalid && phone.touched || editMode">
               <div class="alert alert-danger">Enter a valid phone number.</div>
             </span>
         </div>
@@ -97,7 +97,7 @@
 
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
-          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>a
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>
           <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
         </div>
       </div>
