--- a/src/app/contact/contact-edit/contact-edit.component.html
+++ b/src/app/contact/contact-edit/contact-edit.component.html
@@ -77,11 +77,12 @@
       <div class="row">
         <div class="form-group">
           <label for="groupList">Group Contacts:</label>
-
+          <span style="color: red" [hidden]="!invalidFlag">
+          <div class="alert alert danger">Contact cannot be added to the group as it is already in the group or is the current contact.</div>
+        </span>
           <div class="row" id="groupList"
               style="min-height: 3rem;" 
               dnd-droppable [dropZones]="['contactGroup']" (onDropSuccess)="addToGroup($event)">
-
             <div *ngFor="let contact of groupContacts; let i = index">
               <div>
                 <cms-contact-item class="col-sm-11" [contact]="contact"></cms-contact-item>
@@ -97,7 +98,7 @@
 
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
-          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid && !editMode">Save</button>
           <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
         </div>
       </div>
