--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -1,20 +1,35 @@
-  <div class="panel panel-default">
-    <div class="col-xs-12 panel-heading">
-      <div class=" row pad-left-right">
-        <span class="heading pull-left title">
-          Contacts</span>
-      <a routerLink="new" class="btn btn-success pull-right">Add Contact</a>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="row">
+          <span class="title pad-left-right">Contacts</span>
+        </div>
+        <div class="row">
+          <div class="input-group pull-left pad-left-right col-xs-7">
+          <!-- Add the search box input field here -->
+            <input type="text" class="search-box form-control" placeholder="Enter a search value" #searchBox (keyup)="search(searchBox.value)">
+            <div class="glyphicon glyphicon-search input-group-addon" (click)="search(searchBox.value)"></div>
+          </div>
+        <div class="pull-right pad-left-right">
+          <a [routerLink]="['new']" class="btn btn-success">New Contact</a>
+      </div>
     </div>
-    <div class="panel-body">
-      <div class="row">
-        <div class="col-xs-12 margin-top">
-          <cms-contact-item *ngFor="let contact of contacts" 
+  </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-xs-12 margin-top">
+            <cms-contact-item *ngFor="let contact of contacts | contactFilter:term" 
                                             [contact]="contact"
                                             dnd-draggable [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']">
-          </cms-contact-item>
+            </cms-contact-item>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
 <!--dumping data requires string interpolation sed if within tag, can use string interpolation instead, see h4 contents vs img.alt content-->
+
+
+          <!-- *ngFor="let server of servers | filter:filteredStatus:'status' | sort:'name'" -->
