--- a/src/app/document/document-edit/document-edit.component.html
+++ b/src/app/document/document-edit/document-edit.component.html
@@ -17,7 +17,7 @@
               max="120"
               [ngModel]="document?.name"
               #name="ngModel">
-              <span style="color:red" [hidden]="!name.invalid">
+              <span [ngStyle]="{'border':!name.invalid ? '1px solid red' : '1px solid black', 'display':!name.invalid || name.pristine ? 'none' : 'block'}">
                 <div class="alert alert-danger">Document name is required.</div>
                 </span>
           </div>
@@ -50,7 +50,7 @@
               max="255"
               [ngModel]="document?.url"
               #url="ngModel">
-              <span style="color:red" [hidden]="!url.invalid">
+              <span [ngStyle]="{'border':url.invalid ? '1px solid red' : '1px solid black', 'display':!url.invalid || url.pristine ? 'none' : 'block'}">
                 <div class="alert alert-danger">Document URL is required.</div>
                 </span>
              </div>
@@ -65,3 +65,5 @@
       </form>
     </div>
   </div>
+
+ <!-- [hidden]="!url.invalid || url.pristine"-->
