--- a/src/app/document/document-edit/document-edit.component.css
+++ b/src/app/document/document-edit/document-edit.component.css
@@ -1,4 +1,7 @@
-input.ng-invalid {
+/* input.ng-invalid {
     border: 1px solid red;
   }
-  
+  input.ng-valid.ng-pristine {
+    border: 1px solid black;
+  }
+   */
