--- a/src/app/document/document-list/document-list.component.html
+++ b/src/app/document/document-list/document-list.component.html
@@ -5,7 +5,7 @@
             <span class="pull-left title">
                 Documents
             </span>
-            <a routerLink="new" class="btn btn-success pull-right">Add Document</a>
+            <a routerLink="new" class="btn btn-success pull-right">New Document</a>
         </div>
     </div>
     <div class="panel-body">
