Works: all functions!!!; Failed: Nothing!!!; submitting 7-12-2022 as Complete

--- a/src/app/contact/contact-item/contact-item.component.html
+++ b/src/app/contact/contact-item/contact-item.component.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <a
-[routerLink]="['/contact', contact.id]"
+[routerLink]="['/contact', contact?.id]"
 routerLinkActive="active"
   class="list-group-item clearfix">
   <div class="pull-left">
