--- a/src/app/contact/contact-edit/contact-edit.component.html
+++ b/src/app/contact/contact-edit/contact-edit.component.html
@@ -13,7 +13,8 @@
             required
             max="120"
             [ngModel]="contact?.name"
-            #name="ngModel">
+            #name="ngModel"
+            [value]="originalContact?.name">
             <span [ngStyle]="{'border':!name.invalid ? '1px solid red' : '1px solid black', 'display':!name.invalid || name.pristine ? 'none' : 'block'}">
             <div class="alert alert-danger">Name is required.</div>
           </span>
@@ -33,7 +34,8 @@
             required
             [ngModel]="contact?.email"
             #email="ngModel"
-            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+            [value]="originalContact?.email">
             <span [ngStyle]="{'border':!email.invalid ? '1px solid red' : '1px solid black', 'display':!email.invalid || email.pristine ? 'none' : 'block'}">
               <div class="alert alert-danger">Enter a valid email address.</div>
             </span>
@@ -52,7 +54,8 @@
             max="255"
             [ngModel]="contact?.phone"
             #phone="ngModel"
-            pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*">
+            pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*"
+            [value]="originalContact?.phone">
             <span [ngStyle]="{'border':!phone.invalid ? '1px solid red' : '1px solid black', 'display':!phone.invalid || phone.pristine ? 'none' : 'block'}">
               <div class="alert alert-danger">Enter a valid phone number.</div>
             </span>
@@ -70,7 +73,8 @@
             size="150"
             max="255"
             [ngModel]="contact?.imageUrl"
-            #imageUrl="ngModel">
+            #imageUrl="ngModel"
+            [value]="originalContact?.imageUrl">
         </div>
       </div>
 
@@ -98,7 +102,7 @@
 
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
-          <button class="btn btn-success" type="submit" [disabled]="!f.valid && !editMode">Save</button>
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>
           <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
         </div>
       </div>
