--- a/src/app/message/message-item/message-item.component.html
+++ b/src/app/message/message-item/message-item.component.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <a [routerLink]="['/message', message?.id]" class="list-group-item clearfix">
   <div class="">
-    <span class="messageHeader">{{ message?.sender.name }}</span>
+    <strong>Sender: </strong><span class="messageHeader">{{ message?.sender.name }}</span>
+      <strong>     Subject: </strong><span class="messageHeader">{{message?.subject}}</span>
+    <hr>
     <div class="messageText">{{ message?.msgText }}</div>
   </div>
 </a>
